Fixed Python 3 issue caused by OrderedDict changes.

--- a/twobuntu/touch/templates/touch/generator.html
+++ b/twobuntu/touch/templates/touch/generator.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col-sm-4 text-center">
             <div id="device-preview" class="spinner-container">
-                <img src="{% get_static_prefix %}img/touch/{{ form.template.value|default:templates.keys.0 }}.jpg">
+                <img src="{% get_static_prefix %}img/touch/{{ form.template.value }}.jpg">
                 <div class="spinner"></div>
             </div>
         </div>
