--- a/twobuntu/templates/404.html
+++ b/twobuntu/templates/404.html
@@ -12,11 +12,9 @@
                 It is also possible that you followed a link that contained a typo.
             </p>
             <p>Please use the search form to help find the page you were looking for.</p>
-            <!-- Not working at the moment
-                <p>In the meantime, here is a cute picture of a kitten.</p>
-                <br>
-                <img src="http://placekitten.com/g/400/300" />
-            -->
+            <p>In the meantime, here is a cute picture of an animal.</p>
+            <br>
+            <img src="http://lorempixel.com/g/400/300/animals/" />
         </div>
         <div class="col-md-4">
             {% include "fragments/search.html" %}
