--- a/twobuntu/articles/templates/articles/fragments/apps.html
+++ b/twobuntu/articles/templates/articles/fragments/apps.html
@@ -10,7 +10,7 @@
         <img src="{% static "img/google-play.png" %}"
              title="2buntu for Android">
     </a>
-    <a href="https://appstore.bhdouglass.com/app/com.ubuntu.developer.nathanosman.twobuntu-app" target="_blank">
+    <a href="https://uappexplorer.com/app/com.ubuntu.developer.nathanosman.twobuntu-app" target="_blank">
         <img src="{% static "img/ubuntu-touch.png" %}"
              title="2buntu for Ubuntu Touch">
     </a>
