Added Google Webmaster verification code.

--- a/twobuntu/templates/pages/index.html
+++ b/twobuntu/templates/pages/index.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block meta %}
-    <meta name="author" content="Nathan Osman">
-    <meta name="description" content="A blog created by Ubuntu community members to provide news, tutorials, reviews, tips, and the occasional rant - all centering around the world's most popular Linux distribution: Ubuntu."/>
-    <meta name="wot-verification" content="e3ab301eccb71149c5d5"/>
+    <meta name="description" content="A blog created by Ubuntu community members to provide news, tutorials, reviews, tips, and the occasional rant - all centering around the world's most popular Linux distribution: Ubuntu.">
+    <meta name="google-site-verification" content="BOrMmOCjwsu-XkdXWgqIHA5CP85AZjA2-MZzn8DWkvI">
+    <meta name="wot-verification" content="e3ab301eccb71149c5d5">
 {% endblock %}
 
 {% block rss %}
