Added link to Pushbullet channel.

--- a/twobuntu/templates/pages/index.html
+++ b/twobuntu/templates/pages/index.html
@@ -48,6 +48,11 @@
                     <span class="fa fa-rss"></span>
                     Latest Articles Feed
                 </a>
+                <br>
+                <a href="https://www.pushbullet.com/channel?tag=2buntu">
+                    <span class="fa fa-bullhorn"></span>
+                    Pushbullet Channel
+                </a>
             </div>
             {% include "categories/fragments/categories.html" %}
         </div>
